--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,4 @@
-nclude any environment variables here that you want to be available in the app
+# include any environment variables here 
+# that you want to be available in the app
 # and copy this file to .env
 OPENAI_API_KEY="Your open ai api key"
